// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should generate the RSS feed 1`] = `
"<?xml version="1.0" encoding="utf-8"?>
<rss version="2.0" xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:content="http://purl.org/rss/1.0/modules/content/">
    <channel>
        <title>We.Publish Feed</title>
        <link>undefined</link>
        <description></description>
        <lastBuildDate>Sun, 01 Jan 2023 00:00:00 GMT</lastBuildDate>
        <docs>https://validator.w3.org/feed/docs/rss2.html</docs>
        <generator>We.Publish (https://github.com/wepublish/wepublish)</generator>
        <language>de</language>
        <copyright>We.Publish</copyright>
        <category>foo</category>
        <category>bar</category>
        <item>
            <title><![CDATA[Title]]></title>
            <link>https://example.com</link>
            <guid>clgp1hfio50331801rejmrk6sj3</guid>
            <pubDate>Sun, 01 Jan 2023 00:00:00 GMT</pubDate>
            <description><![CDATA[lead]]></description>
            <content:encoded><![CDATA[<h1>Title</h1><h2>Title 2</h2><h3>Title 3</h3><ul><li>Unordered List</li></ul><ol><li>Ordered List</li></ol><p></p><tr><td><p>Table Cell 1</p></td><td><p>Table Cell 2</p></td></tr><tr><td><p>Table Cell 3</p></td><td><p>Table Cell 4</p></td></tr><p>Normal text,<strong> Bold</strong>, <em>Italic</em>, <u>Underline</u>, <del>Strikethrough</del>, <sup>Sup</sup>, <sub>Sub</sub>, <a href="https://google.com">Link</a>, &#x1f600;</p>]]></content:encoded>
            <category>foo</category>
            <category>bar</category>
            <enclosure length="0" type="image//500/281" __typename="Image" id="ljh9FHAvHAs0AxC" mimeType="image/jpg" format="jpg" createdAt="2023-04-18T12:38:56.369Z" modifiedAt="2023-04-18T12:38:56.371Z" filename="DSC07717" extension=".JPG" width="4000" height="6000" fileSize="8667448" tags="" focalPoint="[object Object]" url="https://unsplash.it/500/281" xl="https://unsplash.it/1200/400" l="https://unsplash.it/1000/400" m="https://unsplash.it/800/400" s="https://unsplash.it/500/300" xs="https://unsplash.it/300/200" xxs="https://unsplash.it/200/100" xlSquare="https://unsplash.it/1200/1200" lSquare="https://unsplash.it/1000/1000" mSquare="https://unsplash.it/800/800" sSquare="https://unsplash.it/500/500" xsSquare="https://unsplash.it/300/300" xxsSquare="https://unsplash.it/200/200"/>
        </item>
        <item>
            <title><![CDATA[Title]]></title>
            <link>https://example.com</link>
            <guid>clgp1hfio50331801rejmrk6sj3</guid>
            <pubDate>Sun, 01 Jan 2023 00:00:00 GMT</pubDate>
            <description><![CDATA[lead]]></description>
            <content:encoded><![CDATA[<h1>Title</h1><h2>Title 2</h2><h3>Title 3</h3><ul><li>Unordered List</li></ul><ol><li>Ordered List</li></ol><p></p><tr><td><p>Table Cell 1</p></td><td><p>Table Cell 2</p></td></tr><tr><td><p>Table Cell 3</p></td><td><p>Table Cell 4</p></td></tr><p>Normal text,<strong> Bold</strong>, <em>Italic</em>, <u>Underline</u>, <del>Strikethrough</del>, <sup>Sup</sup>, <sub>Sub</sub>, <a href="https://google.com">Link</a>, &#x1f600;</p>]]></content:encoded>
            <category>foo</category>
            <category>bar</category>
            <enclosure length="0" type="image//500/281" __typename="Image" id="ljh9FHAvHAs0AxC" mimeType="image/jpg" format="jpg" createdAt="2023-04-18T12:38:56.369Z" modifiedAt="2023-04-18T12:38:56.371Z" filename="DSC07717" extension=".JPG" width="4000" height="6000" fileSize="8667448" tags="" focalPoint="[object Object]" url="https://unsplash.it/500/281" xl="https://unsplash.it/1200/400" l="https://unsplash.it/1000/400" m="https://unsplash.it/800/400" s="https://unsplash.it/500/300" xs="https://unsplash.it/300/200" xxs="https://unsplash.it/200/100" xlSquare="https://unsplash.it/1200/1200" lSquare="https://unsplash.it/1000/1000" mSquare="https://unsplash.it/800/800" sSquare="https://unsplash.it/500/500" xsSquare="https://unsplash.it/300/300" xxsSquare="https://unsplash.it/200/200"/>
        </item>
    </channel>
</rss>"
`;

exports[`should generate the atom feed 1`] = `
"<?xml version="1.0" encoding="utf-8"?>
<feed xmlns="http://www.w3.org/2005/Atom">
    <id>https://wepublish.ch</id>
    <title>We.Publish Feed</title>
    <updated>2023-01-01T00:00:00.000Z</updated>
    <generator>We.Publish (https://github.com/wepublish/wepublish)</generator>
    <author>
        <name>Foobar</name>
        <uri>https://example.com</uri>
    </author>
    <rights>We.Publish</rights>
    <category term="foo"/>
    <category term="bar"/>
    <entry>
        <title type="html"><![CDATA[Title]]></title>
        <id>https://example.com</id>
        <link href="https://example.com"/>
        <updated>2023-01-01T00:00:00.000Z</updated>
        <summary type="html"><![CDATA[lead]]></summary>
        <content type="html"><![CDATA[<h1>Title</h1><h2>Title 2</h2><h3>Title 3</h3><ul><li>Unordered List</li></ul><ol><li>Ordered List</li></ol><p></p><tr><td><p>Table Cell 1</p></td><td><p>Table Cell 2</p></td></tr><tr><td><p>Table Cell 3</p></td><td><p>Table Cell 4</p></td></tr><p>Normal text,<strong> Bold</strong>, <em>Italic</em>, <u>Underline</u>, <del>Strikethrough</del>, <sup>Sup</sup>, <sub>Sub</sub>, <a href="https://google.com">Link</a>, &#x1f600;</p>]]></content>
        <author>
            <name>Foobar</name>
            <uri>https://example.com</uri>
        </author>
        <author>
            <name>Foobar</name>
            <uri>https://example.com</uri>
        </author>
        <category label="foo" term="foo"/>
        <category label="bar" term="bar"/>
    </entry>
    <entry>
        <title type="html"><![CDATA[Title]]></title>
        <id>https://example.com</id>
        <link href="https://example.com"/>
        <updated>2023-01-01T00:00:00.000Z</updated>
        <summary type="html"><![CDATA[lead]]></summary>
        <content type="html"><![CDATA[<h1>Title</h1><h2>Title 2</h2><h3>Title 3</h3><ul><li>Unordered List</li></ul><ol><li>Ordered List</li></ol><p></p><tr><td><p>Table Cell 1</p></td><td><p>Table Cell 2</p></td></tr><tr><td><p>Table Cell 3</p></td><td><p>Table Cell 4</p></td></tr><p>Normal text,<strong> Bold</strong>, <em>Italic</em>, <u>Underline</u>, <del>Strikethrough</del>, <sup>Sup</sup>, <sub>Sub</sub>, <a href="https://google.com">Link</a>, &#x1f600;</p>]]></content>
        <author>
            <name>Foobar</name>
            <uri>https://example.com</uri>
        </author>
        <author>
            <name>Foobar</name>
            <uri>https://example.com</uri>
        </author>
        <category label="foo" term="foo"/>
        <category label="bar" term="bar"/>
    </entry>
</feed>"
`;

exports[`should generate the json feed 1`] = `
"{
    "version": "https://jsonfeed.org/version/1",
    "title": "We.Publish Feed",
    "author": {
        "name": "Foobar",
        "url": "https://example.com"
    },
    "items": [
        {
            "content_html": "<h1>Title</h1><h2>Title 2</h2><h3>Title 3</h3><ul><li>Unordered List</li></ul><ol><li>Ordered List</li></ol><p></p><tr><td><p>Table Cell 1</p></td><td><p>Table Cell 2</p></td></tr><tr><td><p>Table Cell 3</p></td><td><p>Table Cell 4</p></td></tr><p>Normal text,<strong> Bold</strong>, <em>Italic</em>, <u>Underline</u>, <del>Strikethrough</del>, <sup>Sup</sup>, <sub>Sub</sub>, <a href=\\"https://google.com\\">Link</a>, &#x1f600;</p>",
            "url": "https://example.com",
            "title": "Title",
            "summary": "lead",
            "image": {
                "__typename": "Image",
                "id": "ljh9FHAvHAs0AxC",
                "mimeType": "image/jpg",
                "format": "jpg",
                "createdAt": "2023-04-18T12:38:56.369Z",
                "modifiedAt": "2023-04-18T12:38:56.371Z",
                "filename": "DSC07717",
                "extension": ".JPG",
                "width": 4000,
                "height": 6000,
                "fileSize": 8667448,
                "description": null,
                "tags": [],
                "source": null,
                "link": null,
                "license": null,
                "focalPoint": {
                    "x": 0.5,
                    "y": 0.5
                },
                "title": null,
                "url": "https://unsplash.it/500/281",
                "xl": "https://unsplash.it/1200/400",
                "l": "https://unsplash.it/1000/400",
                "m": "https://unsplash.it/800/400",
                "s": "https://unsplash.it/500/300",
                "xs": "https://unsplash.it/300/200",
                "xxs": "https://unsplash.it/200/100",
                "xlSquare": "https://unsplash.it/1200/1200",
                "lSquare": "https://unsplash.it/1000/1000",
                "mSquare": "https://unsplash.it/800/800",
                "sSquare": "https://unsplash.it/500/500",
                "xsSquare": "https://unsplash.it/300/300",
                "xxsSquare": "https://unsplash.it/200/200"
            },
            "date_modified": "2023-01-01T00:00:00.000Z",
            "author": {
                "name": "Foobar",
                "url": "https://example.com"
            },
            "tags": [
                "foo",
                "bar"
            ]
        },
        {
            "content_html": "<h1>Title</h1><h2>Title 2</h2><h3>Title 3</h3><ul><li>Unordered List</li></ul><ol><li>Ordered List</li></ol><p></p><tr><td><p>Table Cell 1</p></td><td><p>Table Cell 2</p></td></tr><tr><td><p>Table Cell 3</p></td><td><p>Table Cell 4</p></td></tr><p>Normal text,<strong> Bold</strong>, <em>Italic</em>, <u>Underline</u>, <del>Strikethrough</del>, <sup>Sup</sup>, <sub>Sub</sub>, <a href=\\"https://google.com\\">Link</a>, &#x1f600;</p>",
            "url": "https://example.com",
            "title": "Title",
            "summary": "lead",
            "image": {
                "__typename": "Image",
                "id": "ljh9FHAvHAs0AxC",
                "mimeType": "image/jpg",
                "format": "jpg",
                "createdAt": "2023-04-18T12:38:56.369Z",
                "modifiedAt": "2023-04-18T12:38:56.371Z",
                "filename": "DSC07717",
                "extension": ".JPG",
                "width": 4000,
                "height": 6000,
                "fileSize": 8667448,
                "description": null,
                "tags": [],
                "source": null,
                "link": null,
                "license": null,
                "focalPoint": {
                    "x": 0.5,
                    "y": 0.5
                },
                "title": null,
                "url": "https://unsplash.it/500/281",
                "xl": "https://unsplash.it/1200/400",
                "l": "https://unsplash.it/1000/400",
                "m": "https://unsplash.it/800/400",
                "s": "https://unsplash.it/500/300",
                "xs": "https://unsplash.it/300/200",
                "xxs": "https://unsplash.it/200/100",
                "xlSquare": "https://unsplash.it/1200/1200",
                "lSquare": "https://unsplash.it/1000/1000",
                "mSquare": "https://unsplash.it/800/800",
                "sSquare": "https://unsplash.it/500/500",
                "xsSquare": "https://unsplash.it/300/300",
                "xxsSquare": "https://unsplash.it/200/200"
            },
            "date_modified": "2023-01-01T00:00:00.000Z",
            "author": {
                "name": "Foobar",
                "url": "https://example.com"
            },
            "tags": [
                "foo",
                "bar"
            ]
        }
    ]
}"
`;

exports[`should setup the feed 1`] = `
Feed {
  "addCategory": [Function],
  "addContributor": [Function],
  "addExtension": [Function],
  "addItem": [Function],
  "atom1": [Function],
  "categories": [
    "foo",
    "bar",
  ],
  "contributors": [],
  "extensions": [],
  "items": [
    {
      "author": [
        {
          "link": "https://example.com",
          "name": "Foobar",
        },
        {
          "link": "https://example.com",
          "name": "Foobar",
        },
      ],
      "category": [
        {
          "name": "foo",
          "term": "foo",
        },
        {
          "name": "bar",
          "term": "bar",
        },
      ],
      "content": "<h1>Title</h1><h2>Title 2</h2><h3>Title 3</h3><ul><li>Unordered List</li></ul><ol><li>Ordered List</li></ol><p></p><tr><td><p>Table Cell 1</p></td><td><p>Table Cell 2</p></td></tr><tr><td><p>Table Cell 3</p></td><td><p>Table Cell 4</p></td></tr><p>Normal text,<strong> Bold</strong>, <em>Italic</em>, <u>Underline</u>, <del>Strikethrough</del>, <sup>Sup</sup>, <sub>Sub</sub>, <a href="https://google.com">Link</a>, &#x1f600;</p>",
      "date": 2023-01-01T00:00:00.000Z,
      "description": "lead",
      "guid": "clgp1hfio50331801rejmrk6sj3",
      "image": {
        "__typename": "Image",
        "createdAt": "2023-04-18T12:38:56.369Z",
        "description": null,
        "extension": ".JPG",
        "fileSize": 8667448,
        "filename": "DSC07717",
        "focalPoint": {
          "x": 0.5,
          "y": 0.5,
        },
        "format": "jpg",
        "height": 6000,
        "id": "ljh9FHAvHAs0AxC",
        "l": "https://unsplash.it/1000/400",
        "lSquare": "https://unsplash.it/1000/1000",
        "license": null,
        "link": null,
        "m": "https://unsplash.it/800/400",
        "mSquare": "https://unsplash.it/800/800",
        "mimeType": "image/jpg",
        "modifiedAt": "2023-04-18T12:38:56.371Z",
        "s": "https://unsplash.it/500/300",
        "sSquare": "https://unsplash.it/500/500",
        "source": null,
        "tags": [],
        "title": null,
        "url": "https://unsplash.it/500/281",
        "width": 4000,
        "xl": "https://unsplash.it/1200/400",
        "xlSquare": "https://unsplash.it/1200/1200",
        "xs": "https://unsplash.it/300/200",
        "xsSquare": "https://unsplash.it/300/300",
        "xxs": "https://unsplash.it/200/100",
        "xxsSquare": "https://unsplash.it/200/200",
      },
      "link": "https://example.com",
      "title": "Title",
    },
    {
      "author": [
        {
          "link": "https://example.com",
          "name": "Foobar",
        },
        {
          "link": "https://example.com",
          "name": "Foobar",
        },
      ],
      "category": [
        {
          "name": "foo",
          "term": "foo",
        },
        {
          "name": "bar",
          "term": "bar",
        },
      ],
      "content": "<h1>Title</h1><h2>Title 2</h2><h3>Title 3</h3><ul><li>Unordered List</li></ul><ol><li>Ordered List</li></ol><p></p><tr><td><p>Table Cell 1</p></td><td><p>Table Cell 2</p></td></tr><tr><td><p>Table Cell 3</p></td><td><p>Table Cell 4</p></td></tr><p>Normal text,<strong> Bold</strong>, <em>Italic</em>, <u>Underline</u>, <del>Strikethrough</del>, <sup>Sup</sup>, <sub>Sub</sub>, <a href="https://google.com">Link</a>, &#x1f600;</p>",
      "date": 2023-01-01T00:00:00.000Z,
      "description": "lead",
      "guid": "clgp1hfio50331801rejmrk6sj3",
      "image": {
        "__typename": "Image",
        "createdAt": "2023-04-18T12:38:56.369Z",
        "description": null,
        "extension": ".JPG",
        "fileSize": 8667448,
        "filename": "DSC07717",
        "focalPoint": {
          "x": 0.5,
          "y": 0.5,
        },
        "format": "jpg",
        "height": 6000,
        "id": "ljh9FHAvHAs0AxC",
        "l": "https://unsplash.it/1000/400",
        "lSquare": "https://unsplash.it/1000/1000",
        "license": null,
        "link": null,
        "m": "https://unsplash.it/800/400",
        "mSquare": "https://unsplash.it/800/800",
        "mimeType": "image/jpg",
        "modifiedAt": "2023-04-18T12:38:56.371Z",
        "s": "https://unsplash.it/500/300",
        "sSquare": "https://unsplash.it/500/500",
        "source": null,
        "tags": [],
        "title": null,
        "url": "https://unsplash.it/500/281",
        "width": 4000,
        "xl": "https://unsplash.it/1200/400",
        "xlSquare": "https://unsplash.it/1200/1200",
        "xs": "https://unsplash.it/300/200",
        "xsSquare": "https://unsplash.it/300/300",
        "xxs": "https://unsplash.it/200/100",
        "xxsSquare": "https://unsplash.it/200/200",
      },
      "link": "https://example.com",
      "title": "Title",
    },
  ],
  "json1": [Function],
  "options": {
    "author": {
      "link": "https://example.com",
      "name": "Foobar",
    },
    "copyright": "We.Publish",
    "description": "",
    "generator": "We.Publish (https://github.com/wepublish/wepublish)",
    "id": "https://wepublish.ch",
    "language": "de",
    "title": "We.Publish Feed",
    "updated": 2023-01-01T00:00:00.000Z,
  },
  "rss2": [Function],
}
`;
